force-app/main/default/objects/Shipping_Address__c/fields/Shipping_Address_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Full_Name__c</fullName>
    <label>Shipping Address Full Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>