force-app/main/default/objects/Shipping_Address__c/fields/Shipping_Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Zip_Code__c</fullName>
    <label>Shipping Postal/Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>